# binfmt

./: .gitmodules  CMakeLists.txt  FileUtils.h  README.md  benchmarks.cpp  binfmt.h  python_bindings.cpp  test_BinaryFile.cpp  test_FileUtils.cpp  test_common.h  tests.cpp  tests_BinaryFile.cpp  tests_FileUtils.cpp
doc/: Benchmarks.md
examples/: minimal.cpp  pod.cpp
include/: FileUtils.h  binfmt.h  binfmtv2.h
